--- a/client/sass/_topnav.scss
+++ b/client/sass/_topnav.scss
@@ -7,4 +7,9 @@
         margin: 0 !important;
         padding: 0 !important;
     }
+
+    .navbar-brand {
+        margin-right: 0px;
+        padding-right: 5px;
+    }
 }
